# ChangeLog for media-radio/fldigi
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/ChangeLog,v 1.84 2013/08/16 19:35:40 tomjbe Exp $

*fldigi-3.21.74 (16 Aug 2013)

  16 Aug 2013; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.21.74.ebuild:
  version bump

*fldigi-3.21.73 (30 Jul 2013)

  30 Jul 2013; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.21.73.ebuild:
  Version bump

  15 Jul 2013; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.21.60.ebuild,
  -fldigi-3.21.70.ebuild, -fldigi-3.21.71.ebuild:
  Drop old

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> fldigi-3.21.72.ebuild:
  Stable for x86, wrt bug #475208

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> fldigi-3.21.72.ebuild:
  Stable for amd64, wrt bug #475208

*fldigi-3.21.72 (21 May 2013)

  21 May 2013; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.21.72.ebuild:
  Version bump

*fldigi-3.21.71 (09 May 2013)

  09 May 2013; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.21.50.ebuild,
  +fldigi-3.21.71.ebuild:
  Version bump. Remove old

  20 Apr 2013; Agostino Sarubbo <ago@gentoo.org> fldigi-3.21.68.ebuild:
  Stable for x86, wrt bug #466464

  20 Apr 2013; Agostino Sarubbo <ago@gentoo.org> fldigi-3.21.68.ebuild:
  Stable for amd64, wrt bug #466464

*fldigi-3.21.70 (19 Apr 2013)

  19 Apr 2013; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.21.65.ebuild,
  -fldigi-3.21.66.ebuild, +fldigi-3.21.70.ebuild:
  Version bump. Remove old

*fldigi-3.21.68 (21 Feb 2013)

  21 Feb 2013; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.21.67.ebuild,
  +fldigi-3.21.68.ebuild:
  bug fix release. remove old one

*fldigi-3.21.67 (02 Feb 2013)

  02 Feb 2013; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.21.61.ebuild,
  -fldigi-3.21.62.ebuild, -fldigi-3.21.63.ebuild, -fldigi-3.21.64.ebuild,
  +fldigi-3.21.67.ebuild:
  Version bump. remove old.

*fldigi-3.21.66 (13 Jan 2013)
