@@ -1,20 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST fldigi-3.21.68.tar.gz 2139376 SHA256 3f0b647d3bd5470aad5a518189837c56056f822bb94ba20a5422b23183a625a6 SHA512 25af22e40b7dd998f0ab876a8d11d15f79e0dc69db2af0932cc141e5a80050a3737c7b1fadb6635b9fe3b28f0a00f89df5c1f42621cc4cf82566bd8b3e4fa84f WHIRLPOOL 0c442882f0e5b7dd60380b1e781ec24bec7e6d13546b106c06938973436c200497befd725f1491ba044463a02557683880a08de992e046dae9d2f9a70f3ea245
 DIST fldigi-3.21.72.tar.gz 2156241 SHA256 352952c03b64f6cc002aceca895a97861cf5c684865828ff8ff5d8b733816f7d SHA512 c9a14f0d17203077acc8cc8f58531582e7118c1a342adb37d7fa63ccfbf22a91e9d7721e8c21fa072af3be82a67cb643203ed12164231752966c1263dbc64dca WHIRLPOOL dfec1a829b498dd99429625d64e4b7ee6101c96b86b545476e7a8d62d23157a78dc58dc8bce078c48d8519f9ceeb140a6d94cec5316d500996a1a7eb6d370dac
 DIST fldigi-3.21.73.tar.gz 2617774 SHA256 967502e53c2d1af3fd0b19d71eee687aa76979d1640dcd0038bde0277562df1d SHA512 aad0da46d0961de66c18f430bd8ccd694ca8f9423624e7361b90078a6def7e7321efc6ceeddd769783f70186989016ff85734e9575fd7d380732442cc51fe437 WHIRLPOOL 4fb4339e0f1869adca0be6cd86a687f26290bdc711633cf5c214540561bc07d129a2d13a4ad013208b5896592131b420456041264da9934085cd059e1f21bff6
 DIST fldigi-3.21.74.tar.gz 2618924 SHA256 9df7951812783c498d6858c0bbff8c8b3da75a032f252868a9be66dd7a147755 SHA512 976c4e90039885cb5e88dd8af019a3f4dfec307e0292f7771ffa2d296b11a9fbe7b408322a4d70b2a22a4a6fe341d255b330ef6e38b7d31f571a3b13846f2920 WHIRLPOOL 772ca04042d75fca4144a8036b2fb90861f4935f38121612a1c72ab42b4a01bef54979d8720ee4b115a6590ac0246cb55bdb04e3044bec824b1d1804aa81a298
-EBUILD fldigi-3.21.68.ebuild 1243 SHA256 60822e7b48caa988d176bdb8ff59b9c2a98ffd639d12d8e2efa32202b6132ea0 SHA512 60c25b7b6678f972c2fee4d1498f52b6256e105fe27e92961fecf8fc325957ccc66dc701fe76b84dc3d3436401e00278449da226fb5d4efd2d3bc8a78afb6dff WHIRLPOOL 484e7586c187131adc153f36d612e2cfd293a72e937293207a689bdc6fe4ca111292970b937c808a79ad33d7a2bd7f49d495a5c63e035e3e3c703bf7018dd80f
+DIST fldigi-3.21.75.tar.gz 2536772 SHA256 4fe141e22365ae751ad2e0391e49207dcfe25c1800728fd8e4146d855e33f477 SHA512 1dd63aeb937b400a1211dcc09e45d2507ebde3c26f784c180446eb865ef49f0a9425c4f542ddcd5a26ba31630f1e1fd54a0794f33ee3821ebe71910852b43c1b WHIRLPOOL d49b3664c97468ab3004444a21a57db4fc2bac32bc97c6808623278ef8633bc137e11dddede3f40d618a01d37e31f4a463bdd8471c1a820699e120134250cf36
 EBUILD fldigi-3.21.72.ebuild 1174 SHA256 75c4d7f32543fb832e4a4dbc24bd2849594cb0daa7b70a342b4a7f953e8ad52a SHA512 77f008eac53c1823bbd517167a805d363908c52d8fd0e8b3737838621538cd74c6d1238d75da83fe1b26d7a3012e9fa93ba79cba36702a3858bbda7855fb4829 WHIRLPOOL bd8c950920edf2f2cfbbe4da0a3a261226996b4b8c2b08ebad0cc93723cf378322a09381b7076f7bcd7b53f0359219c211654beb3d61210ad1d05036edd8d207
 EBUILD fldigi-3.21.73.ebuild 1134 SHA256 4d32aa824a7bf175c715691bca6152d4ebadefaac323d66c6a58e82a68fe8b9e SHA512 6febdb854b04a03432e2fd4e7b3a515b124c6880ff248cfc94696275098d793355a023f14868fb3f124f55a7b89576e5fe1384dd6f6169a3439202ff8ddd9dd0 WHIRLPOOL 7e004966bcc52cefd31463f2bebd1916f64af20cde03a1b55188a009f914b1b3ee1aa2bb63ccf3c9b5a8464e1e34f601c43ffb3016017978c6c9cba53cc8bf47
 EBUILD fldigi-3.21.74.ebuild 1134 SHA256 19dd8a69724b174161bab4ac92b52a17881840633048020b64d08872fcef21ec SHA512 75e77d6a1a829278ad231295925cb627bfe528159ad4c4f3430701b57d3dbb0408cf424527d35a99a5784491df3a7ff9eee6ed8f05ec7e92978e4857cb276455 WHIRLPOOL b608c646421c5c462ab02e4beb3da6715daebacd05c9f2e996d0bb0b2797e942c3621dd28c2ecbf2495e4a981bbecaad051846584defad1dccf700fca99441e3
-MISC ChangeLog 12158 SHA256 3d54d1b1ef017cd1f1eeb645e7ff50cbbce7e728a78821b695e0b2550972321b SHA512 c42b61f699ee040b795596b623bf6910fc68cc04d248dbd853eda58592dfbffe76d5bdb3eeee9fe38dffed2983e35cc1a75e604235e31bd133c5f29f5f53dec2 WHIRLPOOL f3a750c4d9b449416b3b4f55d8cbfbe554945ab0a91a067cc2f272a7d5a74cf519d832e205eff3890c8bf0eb3196fb1ae23d3f13a7b7d66735cab64d97ad4d9b
+EBUILD fldigi-3.21.75.ebuild 1134 SHA256 79f66947606130f412f8a5caf2ca6dc678b0ac6471aca5fa6da46b7fbdcc1da8 SHA512 341ed657f6c1686c0f19765305317a27ae7e3b5a690144a63403fcb1f373f48e4a0cb646cc07f13a4e7f7969d8c43e3bba07f4db1fcc475b9a327f11bba5eb14 WHIRLPOOL ce18ec7a49762cd9aa2580a2b3f4a129d24fe07dfff16f33029de51580bbf92471d70465dce377ab48c23e24976636b0fd88a905c871abe189cc1a24435fa23e
+MISC ChangeLog 12320 SHA256 ac2ce37e9ce56569ee20b08e3a2c9d205ece14918e9ee1f6816c0b74445b35a0 SHA512 2eb96067291255b0d4af5c2fae096834b63ed083af1f65a4832f8103cd614f4f9309ac4967ae18cf0e5083c4c419b3f6aa962e19dd9529d70bf219ce992e9267 WHIRLPOOL d8dd9653e0dc8faf20cf27cd5821f63d5a6c3cda774ac70449dd4c34ed398f6f07f3c98464a85e7531608401dc15e5b9779fbd3c6152e192d77925298274a1c8
 MISC metadata.xml 405 SHA256 bf191cb45badf521b9ecf320be39d252558f325477dde842c815b8db0447a8d7 SHA512 14d4a18063e929ff828fce20e6f18b20f9fcfdbb8ff130046b399f59ff30834c008e8d8e9800ccde31676cec9389d0efda9826ee2cb80558f11b7ef9b249af68 WHIRLPOOL c2ce3d5b6fb9d07888157297baed0e583687f27230e78a30ba8b177a871f506978cd8e989278c80d4e258a5b7470a850eead9ad6e0ef39a2a2b5533ffd9a76cb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIOfyIACgkQQe4uqXYgU9Ur8wCfaWPZBM7qKHvvRJte5DElSDqb
-1i0AoLUJPTYvTBiFjOVbeh9KSISypjY5
-=BNeG
+iEYEAREIAAYFAlIloNQACgkQQe4uqXYgU9WHLwCgtnzryLzMOHguKWBDrGYnBF9x
+5GIAn30bd4B1ki1xj8BEWFLmrYZnzHeB
+=IFwM
 -----END PGP SIGNATURE-----
