@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/fldigi-3.21.68.ebuild,v 1.3 2013/04/20 20:46:39 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/fldigi-3.21.75.ebuild,v 1.1 2013/09/03 08:41:46 tomjbe Exp $
 
 EAPI=4
 
@@ -10,20 +10,19 @@ SRC_URI="http://www.w1hkj.com/downloads/fldigi/${P}.tar.gz"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="amd64 x86"
-IUSE="hamlib nls portaudio pulseaudio sndfile xmlrpc"
+KEYWORDS="~amd64 ~x86"
+IUSE="hamlib nls portaudio pulseaudio sndfile"
 
 RDEPEND="x11-libs/fltk:1[threads,xft]
 	media-libs/libsamplerate
 	media-libs/libpng
 	x11-misc/xdg-utils
+	dev-perl/RPC-XML
+	dev-perl/Term-ReadLine-Perl
 	hamlib? ( media-libs/hamlib )
 	portaudio? ( >=media-libs/portaudio-19_pre20071207 )
 	pulseaudio? ( media-sound/pulseaudio )
-	sndfile? ( >=media-libs/libsndfile-1.0.10 )
-	xmlrpc? ( || ( >=dev-libs/xmlrpc-c-1.18.02[abyss] <dev-libs/xmlrpc-c-1.18.02 )
-		dev-perl/RPC-XML
-		dev-perl/Term-ReadLine-Perl )"
+	sndfile? ( >=media-libs/libsndfile-1.0.10 )"
 DEPEND="${RDEPEND}
 	nls? ( sys-devel/gettext )
 	virtual/pkgconfig"
@@ -36,7 +35,6 @@ src_configure() {
 		$(use_with hamlib) \
 		$(use_enable nls) \
 		$(use_with pulseaudio) \
-		$(use_with xmlrpc) \
 		--disable-silent-rules \
 		--without-asciidoc
 }
