@@ -1,6 +1,12 @@
 # ChangeLog for media-radio/fldigi
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/ChangeLog,v 1.84 2013/08/16 19:35:40 tomjbe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/ChangeLog,v 1.85 2013/09/03 08:41:46 tomjbe Exp $
+
+*fldigi-3.21.75 (03 Sep 2013)
+
+  03 Sep 2013; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.21.68.ebuild,
+  +fldigi-3.21.75.ebuild:
+  Version bump. Remove old.
 
 *fldigi-3.21.74 (16 Aug 2013)
 
